crates/service/tests/definition/snapshots/features__definition__goto_definition__after_func_type.snap
---
source: crates/service/tests/definition/goto_definition.rs
expression: response
---
{
  "uri": "untitled:test",
  "range": {
    "start": {
      "line": 2,
      "character": 19
    },
    "end": {
      "line": 2,
      "character": 22
    }
  }
}
