crates/service/tests/definition/snapshots/features__definition__goto_definition__block_ident_idx.snap
---
source: crates/service/tests/definition/goto_definition.rs
expression: response
---
{
  "uri": "untitled:test",
  "range": {
    "start": {
      "line": 3,
      "character": 11
    },
    "end": {
      "line": 3,
      "character": 17
    }
  }
}
