crates/service/tests/definition/snapshots/features__definition__goto_definition__exported_global_ident_idx.snap
---
source: crates/service/tests/definition/goto_definition.rs
expression: response
---
[
  {
    "uri": "untitled:test",
    "range": {
      "start": {
        "line": 2,
        "character": 12
      },
      "end": {
        "line": 2,
        "character": 19
      }
    }
  }
]
