crates/service/tests/definition/snapshots/features__definition__goto_definition__func_in_implicit_module.snap
---
source: crates/service/tests/definition/goto_definition.rs
expression: response
---
[
  {
    "uri": "untitled:test",
    "range": {
      "start": {
        "line": 1,
        "character": 6
      },
      "end": {
        "line": 1,
        "character": 11
      }
    }
  }
]
